--- a/python/python-for-data-analysis-students.ipynb
+++ b/python/python-for-data-analysis-students.ipynb
@@ -104,6 +104,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -302,14 +309,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Addition\n",
     "1 + 1"
@@ -317,13 +335,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Multiplication\n",
     "1 * 3"
@@ -331,13 +360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Division\n",
     "1 / 2"
@@ -345,13 +385,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Floor division\n",
     "9 // 2"
@@ -359,13 +410,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exponentiation\n",
     "2 ** 4"
@@ -373,13 +435,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Modulo\n",
     "4 % 2"
@@ -387,13 +460,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Modulo (imperfect)\n",
     "5 % 2"
@@ -529,17 +613,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B is for banana\n"
+     ]
+    }
+   ],
    "source": [
     "# A string (double quotes also work!)\n",
     "banana = 'B is for banana'\n",
-    "banana = \"B is for banana\""
+    "banana = \"B is for banana\"\n",
+    "print(banana)\n"
    ]
   },
   {
@@ -602,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -611,7 +704,7 @@
    "outputs": [],
    "source": [
     "# Make a list with random stuff\n",
-    "random_stuff = [1, 2.0, 'three']"
+    "random_stuff = [1, 2.0, 'three'] "
    ]
   },
   {
@@ -854,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -862,14 +955,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.65"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'fruit_prices' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-52717a9c78e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# We can query the values via the key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfruit_prices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mango'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'fruit_prices' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1024,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -1033,19 +1127,20 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'pear': 1.0}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'dict' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-2aa1cda08fb6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# A dictionary?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;34m{\u001b[0m\u001b[0;34m'pear'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m1.00\u001b[0m\u001b[0;34m}\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'dict' and 'int'"
+     ]
     }
    ],
    "source": [
     "# A dictionary?\n",
-    "{'pear': 1.00}"
+    "{'pear': 1.00} "
    ]
   },
   {
@@ -1065,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1076,7 +1171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a is greater than b\n"
+      "a is equal to b\n"
      ]
     }
    ],
@@ -1116,7 +1211,12 @@
     "# Loop over the random_stuff list we created earlier and print each value.\n",
     "# Alternatively, loop over integers and index into the random_stuff list.\n",
     "for element in random_stuff:\n",
-    "    print(element)"
+    "    print(element)\n",
+    "    \n",
+    "# for element = 1:length(random_stuff)\n",
+    "# print (random_stuff(element))\n",
+    "# end\n",
+    "#Ça serait l'équivalent en MatLab"
    ]
   },
   {
@@ -1695,13 +1795,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 20.7 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This will time how long it takes to multiply 2 * 2 exactly once\n",
     "%time 2 * 2"
@@ -2040,8 +2159,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "tmp=np.arange(100).reshape(10,10)\n",
-    "tmp=tmp.repeat(2,axis=0)\n",
+    "tmp=np.arange(100).reshape(10,10) #on créer un vecteur de 100 et on le reshape pour qu'il soit de 10 par 10\n",
+    "tmp=tmp.repeat(2,axis=0) #On répète la matrice en y 2 fois sur la dimension 0. Essaie de remplacer le 0 par 1, 2, 3, etc. pour voir ce que ça donne.\n",
     "plt.imshow(tmp)"
    ]
   },
@@ -2074,7 +2193,7 @@
     }
    ],
    "source": [
-    "tmp=np.arange(1,0,-.1)\n",
+    "tmp=np.arange(1,0,-.1) #On va de 1 à 0 en bond de -1, donc à l'envers\n",
     "# print(tmp)\n",
     "# tmp2=np.repeat(tmp,3,axis=0)\n",
     "# print(tmp2)\n",
@@ -3191,7 +3310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "rise": {
    "scroll": true
